To display the site correctly on mobile devices, the input width was changed from 300px to 200px and some sections were disabled, such as: 4,5,6,7,8 sections and the logo was removed from the footer.

--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -8,3 +8,13 @@
   margin-left: -50vw; 
   margin-top: 20px; 
 }
+
+@media (max-width: 968px) {
+  .footerMainBlock img {
+    display: none;
+  }
+
+  .footerBtn {
+    display: none;
+  }
+}
