--- a/components/Sections/FifthSection/FifthSection.css
+++ b/components/Sections/FifthSection/FifthSection.css
@@ -38,4 +38,10 @@
   }
 }
 
+@media (max-width: 968px) {
+  .mainDoctorDiv {
+    display: none;
+  }
+}
+
 
