--- a/components/Sections/ThirdSection/ThirdSection.css
+++ b/components/Sections/ThirdSection/ThirdSection.css
@@ -13,7 +13,7 @@
   border: 1px solid lightseagreen;
   border-radius: 30px;
   height: 30px;
-  width: 300px;
+  width: 200px;
   background-color: transparent;
   color: #0586f8;
   padding: 10px;
